# ocaml_math

./: .gitignore  .ocamlformat  README.md  asemio_stats.opam  asemio_stats.opam.template  differences  dune  dune-project  gsl.opam  ocaml-gsl-demo.opam  ocaml_math.opam  test.mac  vim_merlin_test.opam
asemio_stats/: dune  include.macosx.dune  ocaml_nonlinear_fit.h  ocaml_siman.h
gsl/: dune  gsl.c  gsl.ml  ocaml_nonlinear_fit.h  ocaml_siman.h
guile/: Readme.md  dahlia_integration.scm  dune  guile_dahlia.c  guile_dahlia.ml  guile_dahlia_integrate.h  guile_dahlia_integrate.ml
guile/dahlia/: integrate.scm  stats.scm
src/: asemio_stats.c  asemio_stats.ml  basic.ml  cluster.ml  complex.ml  deriv.ml  dune  eigen.ml  erf.ml  fft.ml  fillable_vector.ml  graph.ml  include.linux.dune  integrate.ml  lazy_list.ml  linalg.ml  linear_fit.ml  linux.dune  macosx.dune  nonlinear_fit.ml  ocaml_complex.h  ocaml_deriv.h  ocaml_fft.h  ocaml_math.c  ocaml_math.ml  ocaml_nonlinear_fit.h  ocaml_siman.h  ocaml_solve.h  orthogonal_functions.ml  pca.ml  permute.ml  perturb.ml  polynomial.ml  route.ml  siman.c  siman.h  simulated_annealing.ml  solve.ml  stats.ml  stats_test.ml  (+1 more)
test/: dune
