opam-version: "2.0"
maintainer: "Larry Darryl Lee Jr."
synopsis: "A light-weight wrapper for some of the functions defined within the Gnu Scientific Library (GSL)"
authors: [
  "Larry Darryl Lee Jr."
]
license: "GPLv3"
homepage: "https://github.com/llee454/ocaml-gsl-demo"
bug-reports: "https://github.com/llee454/ocaml-gsl-demo/issues"
pin-depends: [
 ["ppx_profile.1.0.0" "git+https://github.com/llee454/ppx_profile.git#main"]
]
depends: [
  "ocaml"
  "dune" { = "3.5.0" }
  "core"
  "ppx_jane"
  "lwt"
  "lwt_ppx"
  "ppx_profile" { = "1.0.0" }
  "conf-gsl"
]
build: ["dune" "build" "-p" name "-j" jobs]