(library
  (name asemio_stats)
  (public_name asemio_stats)
  (libraries
    core_kernel
  )
 (inline_tests)
  (preprocess (pps ppx_jane ppx_profile))
  (foreign_stubs (language c) (names asemio_stats)
    (flags -I. (:include include.%{system}.dune)))
  (foreign_archives gslcblas gsl)
)

(rule
  (targets libgslcblas.a libgsl.a)
  (action (bash "
    (cp /usr/local/Cellar/gsl/2.7.1/lib/libgslcblas.a . || cp /usr/local/Cellar/gsl/2.7.1/lib/libgslcblas.a .) \
    && (cp /usr/local/Cellar/gsl/2.7.1/lib/libgsl.a . || cp /usr/local/Cellar/gsl/2.7.1/lib/libgsl.a .)
  "))
  (mode standard)
)
