(library
  (name ocaml_math)
  (public_name ocaml_math)
  (libraries core)
  (inline_tests)
  (preprocess (pps ppx_jane ppx_profile))
  (foreign_stubs (language c) (names ocaml_math)
    (flags -fPIC -I. -I/usr/include/gsl/))
  ; Note that we do not statically link to GSL and GSL CBLAS. You
  ; will need to link your executable to these libraries using a Dune
  ; stanza such as:
  (c_library_flags -fPIC -I. -I/usr/include/gsl/ -lgsl -lgslcblas)
)